--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -4,34 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+    <!-- Link De Bt -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <!-- Link De Mi Css -->
     <link rel="stylesheet" href="../css/estilos.css">
     <title>Alan Walker</title>
 </head>
 <body>
     <!-- Encabezado -->
-    <header class="menu">
-        <div class="logo">
-           <img src="../img/LogoAw.png" alt="Logo-alan-walker">
-           <h1>Alan Walker</h1>
-        </div>
-        <nav>
-            <ul class="lista-menu">
-                <li>
-                    <a class="link-menu" href="../index.html">Inicio</a>
-                </li>
-                <li>
-                    <a class="link-menu" href="album.html">Albumes</a>
-                </li>
-                <li>
-                    <a class="link-menu" href="giras.html">Giras</a>
-                </li>
-                <li>
-                    <a class="link-menu" href="galeria.html">Galeria</a>
-                </li>
-                <li>
-                    <a class="link-menu" href="contacto.html">Contacto</a>
-                </li>
-            </ul>
+    <header>
+        <!-- Barra de navegacion -->
+        <nav class="navbar navbar-expand-md navbar-light bg-light border-3 border-bottom border-primar border-success bg-success">
+            <div class="container-fluid menu">
+                <a href="../index.html">
+                    <img class="logo" src="../img/LogoAw.png" alt="">
+                </a>
+                <a href="../index.html" class="navbar-brand "><h1>Alan Walker</h1></a>
+                    <button type="button" class="navbar-toggler"data-bs-toggle="collapse" data-bs-target="#menu-navegacion">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div id="menu-navegacion" class="collapse navbar-collapse paginas">
+                    <ul class="navbar-nav ms-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="pages/album.html">Album</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="pages/giras.html">Giras</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="pages/galeria.html">Galeria</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link active" href="pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 
