--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <title>Alan Walker</title>
 </head>
 <body>
-    <header>
+    <div class="contendor">
+        <header>
             <!-- Barra de navegacion -->
             <nav class="navbar navbar-expand-md navbar-light bg-light border-3 border-bottom border-primar border-success bg-success">
                 <div class="container-fluid menu">
@@ -45,7 +46,52 @@
                     </div>
                 </div>
             </nav>
-    </header>
+        </header>
+
+     <!-- Contenido principal  -->
+        <main>
+            <h2 class="biografia">Biografia</h2>
+            <p class="biografia-parrafo">Alan Walker nació el 24 de agosto de 1997 en Northampton, Reino Unido, hijo del británico Philip Alan Walker y su esposa noruega Hilde Omdal Walker. Como resultado, por su herencia parental internacional, se le concedió la doble ciudadanía tanto del Reino Unido como de Noruega. Walker, a la edad de dos años, junto con su familia, se mudó a Bergen.con dos hermanos, una hermana mayor, Camilla, nacida en Reino Unido, y un hermano menor, Andreas, nacido en Noruega.</p>
+        </main>
+
+        <!-- Trayectoria y imagen de Alan walker -->
+
+        <div class="cuerpo">
+            <div class="cuerpo-informacion">
+                <h2 class="cuerpo-informacion-subtitulo">Trayectoria
+
+                </h2>
+                <P class="cuerpo-parrafo">En 2012, Walker estaba escuchando una canción del DJ italiano David Whistle (también conocido como DJ Ness) y se acercó a él para averiguar cómo producía su música. Se inspiró en los productores de EDM K-391 y Ahrix, y en compositores de cine como Hans Zimmer y Steve Jablonsky.Comenzó a producir su música en su computadora portátil usando FL Studio . En julio de 2012, con la ayuda y los comentarios de sus fanáticos en línea, comenzó a seguir su carrera de productor musical y poco a poco comenzó a publicar su música en YouTube y SoundCloud. Comenzando como productor de dormitorio, fue mejor conocido como DJ Walkzz antes de firmar un contrato discográfico y lanzar su sencillo debut en 2014.</P>
+                <p class="cuerpo-parrafo-dos">A principios de 2017, el canal de YouTube de Alan se convirtió en el canal con más suscriptores registrado en Noruega, tras pasar cerca de 4,5 millones de suscriptores(y incrementando), tuvo la mayor cantidad de visitas entre los YouTubers noruegos con alrededor de 7.7 mil millones de visitas al 25 de enero de 2020. Entre febrero y abril, realizó una gira por Estados Unidos, incluida la asistencia al Euphoria Festival en Texas. En 2019, el video musical de Alan "Diamond Heart" recibió una nominación a Mejor fotografía en los Premios de videos musicales de Berlín. Su video musical de ''Heading Home'' con Ruben aparece en la lista de selección de Silver Screenings 2021 del festival.</p>
+            </div>
+            <div class="alan-walker-info">
+                    <img class="alan-walker-cuerpo" src="img/alan_walker.png" alt="alan-walker">
+                    <p>Productor musical y DJ noruego</p>
+            </div>
+        </div>
+    </div>
+    
+    <!-- Pie de pagina -->
+    <footer>
+        <div class="pie-pagina">
+            <div class="pie-pagina-contenedor">
+                <p class="pie-pagina-derechos">Pagina sin fines de lucro ni comerciales</p>
+                <p class="pie-pagina-derechos">Copyright Andres Vergara ©</p>
+            </div>
+            <div class="redes">
+                <a class="redes-link" href="">
+                    <img class="redes-img" src="img/facebook.png" alt="Logo-De-Facebook">
+                </a>
+                <a class="redes-link" href="">
+                    <img class="redes-img" src="img/spotify1.png" alt="Logo-De-Spotify">
+                </a>
+                <a class="redes-link" href="">
+                    <img class="redes-img" src="img/youtube.png" alt="Logo-De-Youtube">
+                </a>
+            </div>
+        </div>
+
+    </footer>
 
     <!-- Script De Bt -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
