--- a/pages/giras.html
+++ b/pages/giras.html
@@ -52,26 +52,26 @@
             <h2 class="subtitulo-gira">Giras 2023</h2>
         </main>
         
-        <div>
+        <div class="lista">
             <!-- Lista de giras -->
             <div class="menu-tour">
                 <div class="menu-fecha">
                     <div>
-                        <p>Ene 28</p>
+                        <p class="dia">Ene 28</p>
                     </div>
-                    <p>GMO SONIC</p>
-                    <p>sab, 28 ene - 11:00</p>
-                    <p>さいたまスーパーアリーナ,さいたま市中央区</p>
+                    <p class="patrocinio">GMO SONIC</p>
+                    <p class="fecha-hora">sab, 28 ene - 11:00</p>
+                    <p class="lugar">さいたまスーパーアリーナ,さいたま市中央区</p>
                 </div>
 
-                <div>
-                    <div>
+                <div class="menu-completo">
+                    <div class="fecha-lugar">
                         <p>Ene 28</p>
                         <p>GMO SONIC</p>
                         <p>sab, 28 ene - 11:00</p>
                     </div>
 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d808.0299547241334!2d139.62970197200772!3d35.89508101540383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z44GV44GE44Gf44G-44K544O844OR44O844Ki44Oq44O844OKLOOBleOBhOOBn-OBvuW4guS4reWkruWMug!5e0!3m2!1ses!2sar!4v1673190506463!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="ubicacion-gps" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d808.0299547241334!2d139.62970197200772!3d35.89508101540383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z44GV44GE44Gf44G-44K544O844OR44O844Ki44Oq44O844OKLOOBleOBhOOBn-OBvuW4guS4reWkruWMug!5e0!3m2!1ses!2sar!4v1673190506463!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <img class="img-espacio" src="../img/evento1.png" alt="zona-del-evento">
 
                     <button>Comprar</button>
@@ -83,19 +83,19 @@
                     <div>
                         <p>ENE 29</p>
                     </div>
-                    <p>GMO SONIC</p>
-                    <p>dom, 29 ene - 11:00</p>
+                    <p class="patrocinio">GMO SONIC</p>
+                    <p class="fecha-hora">dom, 29 ene - 11:00</p>
                     <p>さいたまスーパーアリーナ,さいたま市中央区</p>
                 </div>
 
-                <div>
-                    <div>
+                <div class="menu-completo">
+                    <div class="fecha-lugar">
                         <p>Ene 29</p>
                         <p>GMO SONIC</p>
                         <p>dom, 29 ene - 11:00</p>
                     </div>
 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d808.0299547241334!2d139.62970197200772!3d35.89508101540383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z44GV44GE44Gf44G-44K544O844OR44O844Ki44Oq44O844OKLOOBleOBhOOBn-OBvuW4guS4reWkruWMug!5e0!3m2!1ses!2sar!4v1673190506463!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="ubicacion-gps" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d808.0299547241334!2d139.62970197200772!3d35.89508101540383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z44GV44GE44Gf44G-44K544O844OR44O844Ki44Oq44O844OKLOOBleOBhOOBn-OBvuW4guS4reWkruWMug!5e0!3m2!1ses!2sar!4v1673190506463!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <img class="img-espacio" src="../img/evento1.png" alt="zona-del-evento">
 
                     <button>Comprar</button>
@@ -107,19 +107,19 @@
                     <div>
                         <p>MAR 24</p>
                     </div>
-                    <p>Beyond Wonderland</p>
-                    <p>vie, 24 mar - 11:00</p>
-                    <p>NOS Events Center,San Bernardino</p>
+                    <p class="patrocinio">Beyond Wonderland</p>
+                    <p class="fecha-hora">vie, 24 mar - 11:00</p>
+                    <p class="lugar">NOS Events Center,San Bernardino</p>
                 </div>
 
-                <div>
-                    <div>
+                <div class="menu-completo">
+                    <div class="fecha-lugar">
                         <p>Mar 24</p>
                         <p>Beyond Wonderland</p>
                         <p>vi, 24 mar - 11:00</p>
                     </div>
 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6237.615779370808!2d-117.2959814493061!3d34.08843109486877!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcacb8157ec14d%3A0x9ff72422d9df2e0a!2sNational%20Orange%20Show%20Event%20Center!5e0!3m2!1ses!2sar!4v1673190970997!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="ubicacion-gps" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6237.615779370808!2d-117.2959814493061!3d34.08843109486877!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcacb8157ec14d%3A0x9ff72422d9df2e0a!2sNational%20Orange%20Show%20Event%20Center!5e0!3m2!1ses!2sar!4v1673190970997!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <button>Comprar</button>
                 </div>
             </div>
@@ -144,5 +144,9 @@
             </div>
         </div>
     </footer>
+    
+    <!-- Script De Bt -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
 </body>
 </html>
