--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -31,16 +31,16 @@
                             <a class="nav-link active" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="pages/album.html">Album</a>
+                            <a class="nav-link active" href="album.html">Album</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="pages/giras.html">Giras</a>
+                            <a class="nav-link active" href="giras.html">Giras</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="pages/galeria.html">Galeria</a>
+                            <a class="nav-link active" href="galeria.html">Galeria</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link active" href="pages/contacto.html">Contacto</a>
+                            <a class="nav-link active" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
