--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="contendor">
         <header>
             <!-- Barra de navegacion -->
-            <nav class="navbar navbar-expand-md navbar-light bg-light border-3 border-bottom border-primar border-success bg-success">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light border-3 border-bottom border-primar border-success bg-success">
                 <div class="container-fluid menu">
                     <a href="index.html">
                         <img class="logo" src="img/LogoAw.png" alt="">
